<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/relativeNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/no_data_available"
            android:textColor="@color/night_blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/there_is_no_data_available_right_now"
            android:textColor="#ACA8A8"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_black_for_bott"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_marginTop="15dp"
            android:indeterminateDrawable="@drawable/progress_drawable_small"
            android:visibility="gone" />
    </LinearLayout>

</layout>