<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.selwantech.raheeb.ui.auth.register.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarColoredBackArrowDark" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|top"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="100dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_70sdp"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:srcCompat="@drawable/logo"
                    android:tint="@color/colorPrimaryDark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center|start"
                        android:text="@string/user_name"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/extras_background"
                        android:hint="@string/user_name"
                        android:padding="@dimen/_7sdp"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center|start"
                        android:text="@string/phone_number"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                    <EditText
                        android:id="@+id/ed_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/extras_background"
                        android:drawablePadding="@dimen/_5sdp"
                        android:hint="@string/enter_your_phone_number"
                        android:inputType="number"
                        android:padding="@dimen/_7sdp"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center|start"
                        android:text="@string/email_optional"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/extras_background"
                        android:hint="@string/email"
                        android:padding="10dp"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center|start"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        android:background="@drawable/extras_background"
                        android:layout_margin="@dimen/_5sdp">
                        <EditText
                            android:id="@+id/edPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="true"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:background="@android:color/transparent"
                            android:padding="@dimen/_7sdp"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center|start"
                        android:text="@string/confirm_password"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/extras_background">

                        <EditText
                            android:id="@+id/edConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:background="@android:color/transparent"
                            android:padding="10dp"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/_2sdp"
                        app:cardElevation="1dp">


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center|start">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkboxReadTerm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/check_box_selector"
                            android:checked="false" />

                        <TextView
                            android:id="@+id/tvResend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/your_agree_to_raheeb"
                            android:textColor="@color/black"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/tvTermsOfService"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:onClick="@{() -> viewModel.privacyPolicyClicked()}"
                            android:text="@string/terms_of_service"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/and"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:onClick="@{() -> viewModel.privacyPolicyClicked()}"
                            android:text="@string/and"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </LinearLayout>
                    <TextView
                        android:id="@+id/tvPrivacyPolicy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:onClick="@{() -> viewModel.privacyPolicyClicked()}"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:background="@drawable/shape_of_logo"
                    android:onClick="@{() -> viewModel.registerClicked()}"
                    android:text="@string/confirm"
                    android:textColor="@color/white" />


            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</layout>