<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="all"
            type="com.selwantech.raheeb.ui.dialog.OnLineDialog" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="300dp"
        android:minHeight="250dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/background_with_shadow_solid"
            android:minWidth="300dp"
            android:minHeight="250dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/language"
                android:textColor="@color/night_blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|start"
                    android:buttonTint="@color/night_blue"
                    android:checked="true"
                    android:text="@string/arabic"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/en"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|end"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:buttonTint="@color/night_blue"
                    android:text="@string/english"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Cancel"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left|start"
                    android:background="@drawable/shape_black_for_bott"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/Cancel"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/OK"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|end"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/shape_black_for_bott"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/OK"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>