<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.selwantech.raheeb.ui.auth.forgetpassword.ForgetPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarColoredBackArrowDark" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edPhoneNumber"
                style="@style/poppins_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/shape_rounded_empty_green_light"
                android:cursorVisible="true"
                android:hint="@string/enter_your_password"
                android:padding="10dp"
                android:textSize="13sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSavePassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/shape_of_logo"
            android:onClick="@{() -> viewModel.sendCode()}"
            android:text="@string/save_changes"
            android:textColor="@color/white" />
    </LinearLayout>


</layout>